# ColRAG

./: .gitignore  CONTRIBUTING.md  LICENCE  README.md  pyproject.toml  pytest.ini  reranked_results.json  test_rerank.py
.github/workflows/: pypi-release.yml  test-and-coverage.yml
colrag/: __init__.py  cli.py  config.py  indexer.py  logger.py  retriever.py  utils.py
colrag/plugins/: __init__.py  base.py
tests/: __init__.py  test_indexer.py  test_retriever.py
